test/types/records/compilerErrors/deleteRecordMessage.bad
$CHPL_HOME/modules/internal/ChapelBase.chpl:1225: error: delete not allowed on records
